name:     gearh
version:  0.1.0.0
synopsis: FRP library made with simplicity in mind

-- description:

license:       MIT
license-file:  LICENSE
author:        Ivo Kosir
maintainer:    ivo.kosir93@gmail.com
copyright:     Copyright © 2015 Ivo Kosir
category:      FRP
build-type:    Simple
cabal-version: >=1.10

-- extra-source-files:

executable gearh
  hs-source-dirs:   src
  main-is:          Main.hs
  default-language: Haskell2010
  ghc-options:      -Wall

  build-depends:
    base >=4.8 && <4.9,
    cogh

  -- other-extensions:

  other-modules:
    FRP.Gearh

