name:     gearh
version:  0.1.0.0
synopsis: FRP library made with simplicity in mind

-- description:

license:       MIT
license-file:  LICENSE
author:        Ivo Kosir
maintainer:    ivo.kosir93@gmail.com
copyright:     Copyright © 2015 Ivo Kosir
category:      FRP
build-type:    Simple
cabal-version: >=1.10

-- extra-source-files:

library
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall

  build-depends:
    base >=4.8 && <4.9

  -- other-extensions:

  exposed-modules:
    FRP.Gearh

executable renderResources
  main-is:          test/renderResources.hs
  default-language: Haskell2010
  ghc-options:      -Wall

  build-depends:
    base >=4.8 && <4.9,
    gearh,
    cogh

executable renderWithReturn
  main-is:          test/renderWithReturn.hs
  default-language: Haskell2010
  ghc-options:      -Wall

  build-depends:
    base >=4.8 && <4.9,
    gearh,
    cogh
